--- a/ipynb/2021.ipynb
+++ b/ipynb/2021.ipynb
@@ -2029,7 +2029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2045,22 +2045,275 @@
     "      scanner = []\n",
     "    else:\n",
     "      scanner.append(np.array([int(x) for x in line.split(',')]))\n",
+    "  scanners.append(scanner)\n",
     "  return scanners\n",
+    "  \n",
     "data19 = format19(data(19))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-1.  0. -0.]\n",
-      " [-0.  1. -0.]\n",
-      " [-0.  0. -1.]] [   68. -1246.   -43.]\n"
+      "scanner [-686 -725 -427] 26\n",
+      "scanner [-771 -358  508] 26\n",
+      "scanner [-710 -818  544] 26\n",
+      "scanner [ 609  700 -441] 26\n",
+      "scanner [537 351 808] 26\n",
+      "scanner [531 706 891] 26\n",
+      "scanner [ 561  525 -401] 26\n",
+      "scanner [-504 -662  562] 26\n",
+      "scanner [ 748  739 -711] 26\n",
+      "scanner [-769 -495 -877] 26\n",
+      "scanner [90  6 56] 26\n",
+      "scanner [-449 -332  749] 41\n",
+      "scanner [ 845  541 -613] 41\n",
+      "scanner [-482 -652 -465] 41\n",
+      "scanner [ 256  433 -509] 41\n",
+      "scanner [ 791 -635 -514] 41\n",
+      "scanner [ 368 -350  569] 41\n",
+      "scanner [-886 -627  438] 41\n",
+      "scanner [ 385  700 -524] 41\n",
+      "scanner [ 475 -845 -568] 41\n",
+      "scanner [ 526 -799 -839] 41\n",
+      "scanner [-462  585 -378] 41\n",
+      "scanner [683 867 477] 41\n",
+      "scanner [ 887 -541  259] 41\n",
+      "scanner [ 12 -48 -13] 41\n",
+      "scanner [943 764 440] 41\n",
+      "scanner [ 681  576 -763] 41\n",
+      "scanner [-863  533 -771] 41\n",
+      "scanner [458 528 759] 41\n",
+      "scanner [-833 -573 -767] 41\n",
+      "scanner [-99 117  -7] 41\n",
+      "scanner [-623  627  873] 41\n",
+      "scanner [125 -50  43] 41\n",
+      "scanner [ 704 -633  783] 41\n",
+      "scanner [-635  654  370] 41\n",
+      "scanner [-780  672 -873] 41\n",
+      "scanner [ 476 -305  615] 41\n",
+      "scanner [-686 -725 -427] 41\n",
+      "scanner [-771 -358  508] 41\n",
+      "scanner [-710 -818  544] 41\n",
+      "scanner [ 609  700 -441] 41\n",
+      "scanner [537 351 808] 41\n",
+      "scanner [531 706 891] 41\n",
+      "scanner [ 561  525 -401] 41\n",
+      "scanner [-504 -662  562] 41\n",
+      "scanner [ 748  739 -711] 41\n",
+      "scanner [-769 -495 -877] 41\n",
+      "scanner [-449 -332  749] 55\n",
+      "scanner [ 845  541 -613] 55\n",
+      "scanner [-482 -652 -465] 55\n",
+      "scanner [ 256  433 -509] 55\n",
+      "scanner [ 791 -635 -514] 55\n",
+      "scanner [ 368 -350  569] 55\n",
+      "scanner [-886 -627  438] 55\n",
+      "scanner [ 385  700 -524] 55\n",
+      "scanner [ 475 -845 -568] 55\n",
+      "scanner [ 526 -799 -839] 55\n",
+      "scanner [-462  585 -378] 55\n",
+      "scanner [683 867 477] 55\n",
+      "scanner [ 887 -541  259] 55\n",
+      "scanner [ 12 -48 -13] 55\n",
+      "scanner [943 764 440] 55\n",
+      "scanner [ 681  576 -763] 55\n",
+      "scanner [-863  533 -771] 55\n",
+      "scanner [458 528 759] 55\n",
+      "scanner [-833 -573 -767] 55\n",
+      "scanner [-99 117  -7] 55\n",
+      "scanner [-623  627  873] 55\n",
+      "scanner [125 -50  43] 55\n",
+      "scanner [ 704 -633  783] 55\n",
+      "scanner [-635  654  370] 55\n",
+      "scanner [-780  672 -873] 55\n",
+      "scanner [ 476 -305  615] 55\n",
+      "scanner [-686 -725 -427] 55\n",
+      "scanner [-771 -358  508] 55\n",
+      "scanner [-710 -818  544] 55\n",
+      "scanner [ 609  700 -441] 55\n",
+      "scanner [537 351 808] 55\n",
+      "scanner [531 706 891] 55\n",
+      "scanner [ 561  525 -401] 55\n",
+      "scanner [-504 -662  562] 55\n",
+      "scanner [ 748  739 -711] 69\n",
+      "scanner [-449 -332  749] 69\n",
+      "scanner [ 845  541 -613] 69\n",
+      "scanner [-482 -652 -465] 69\n",
+      "scanner [ 256  433 -509] 69\n",
+      "scanner [ 791 -635 -514] 69\n",
+      "scanner [ 368 -350  569] 69\n",
+      "scanner [-886 -627  438] 69\n",
+      "scanner [ 385  700 -524] 69\n",
+      "scanner [ 475 -845 -568] 69\n",
+      "scanner [ 526 -799 -839] 83\n",
+      "scanner [-462  585 -378] 96\n",
+      "scanner [683 867 477] 96\n",
+      "scanner [ 887 -541  259] 110\n",
+      "scanner [ 12 -48 -13] 110\n",
+      "scanner [943 764 440] 110\n",
+      "scanner [ 681  576 -763] 110\n",
+      "scanner [-863  533 -771] 110\n",
+      "scanner [458 528 759] 110\n",
+      "scanner [-833 -573 -767] 110\n",
+      "scanner [-99 117  -7] 110\n",
+      "scanner [-623  627  873] 110\n",
+      "scanner [125 -50  43] 110\n",
+      "scanner [ 704 -633  783] 110\n",
+      "scanner [-635  654  370] 110\n",
+      "scanner [-780  672 -873] 110\n",
+      "scanner [ 476 -305  615] 110\n",
+      "scanner [-686 -725 -427] 110\n",
+      "scanner [-771 -358  508] 110\n",
+      "scanner [-710 -818  544] 110\n",
+      "scanner [ 609  700 -441] 110\n",
+      "scanner [537 351 808] 110\n",
+      "scanner [531 706 891] 110\n",
+      "scanner [ 561  525 -401] 110\n",
+      "scanner [ 748  739 -711] 124\n",
+      "scanner [-449 -332  749] 124\n",
+      "scanner [ 845  541 -613] 138\n",
+      "scanner [-482 -652 -465] 138\n",
+      "scanner [ 256  433 -509] 138\n",
+      "scanner [ 791 -635 -514] 138\n",
+      "scanner [ 368 -350  569] 138\n",
+      "scanner [-886 -627  438] 138\n",
+      "scanner [ 385  700 -524] 138\n",
+      "scanner [-462  585 -378] 138\n",
+      "scanner [ 887 -541  259] 138\n",
+      "scanner [ 12 -48 -13] 138\n",
+      "scanner [943 764 440] 138\n",
+      "scanner [ 681  576 -763] 152\n",
+      "scanner [-863  533 -771] 152\n",
+      "scanner [458 528 759] 152\n",
+      "scanner [-833 -573 -767] 152\n",
+      "scanner [-99 117  -7] 166\n",
+      "scanner [-623  627  873] 166\n",
+      "scanner [125 -50  43] 166\n",
+      "scanner [ 704 -633  783] 166\n",
+      "scanner [-635  654  370] 166\n",
+      "scanner [-780  672 -873] 166\n",
+      "scanner [ 476 -305  615] 166\n",
+      "scanner [-686 -725 -427] 180\n",
+      "scanner [-771 -358  508] 194\n",
+      "scanner [-710 -818  544] 208\n",
+      "scanner [ 609  700 -441] 222\n",
+      "scanner [537 351 808] 222\n",
+      "scanner [531 706 891] 222\n",
+      "scanner [ 748  739 -711] 222\n",
+      "scanner [ 845  541 -613] 236\n",
+      "scanner [-482 -652 -465] 236\n",
+      "scanner [ 256  433 -509] 250\n",
+      "scanner [ 791 -635 -514] 265\n",
+      "scanner [ 368 -350  569] 265\n",
+      "scanner [-886 -627  438] 280\n",
+      "scanner [ 385  700 -524] 280\n",
+      "scanner [-462  585 -378] 280\n",
+      "scanner [ 887 -541  259] 280\n",
+      "scanner [ 12 -48 -13] 280\n",
+      "scanner [ 681  576 -763] 280\n",
+      "scanner [-863  533 -771] 280\n",
+      "scanner [458 528 759] 280\n",
+      "scanner [-99 117  -7] 280\n",
+      "scanner [-623  627  873] 294\n",
+      "scanner [125 -50  43] 294\n",
+      "scanner [ 704 -633  783] 294\n",
+      "scanner [-635  654  370] 294\n",
+      "scanner [-780  672 -873] 294\n",
+      "scanner [ 609  700 -441] 294\n",
+      "scanner [537 351 808] 294\n",
+      "scanner [531 706 891] 294\n",
+      "scanner [ 845  541 -613] 294\n",
+      "scanner [ 791 -635 -514] 294\n",
+      "scanner [-886 -627  438] 294\n",
+      "scanner [ 385  700 -524] 294\n",
+      "scanner [-462  585 -378] 294\n",
+      "scanner [ 887 -541  259] 294\n",
+      "scanner [ 12 -48 -13] 294\n",
+      "scanner [ 681  576 -763] 308\n",
+      "scanner [-863  533 -771] 308\n",
+      "scanner [458 528 759] 308\n",
+      "scanner [-623  627  873] 308\n",
+      "scanner [125 -50  43] 308\n",
+      "scanner [ 704 -633  783] 308\n",
+      "scanner [-635  654  370] 308\n",
+      "scanner [-780  672 -873] 308\n",
+      "scanner [ 609  700 -441] 308\n",
+      "scanner [537 351 808] 308\n",
+      "scanner [531 706 891] 308\n",
+      "scanner [ 845  541 -613] 308\n",
+      "scanner [ 791 -635 -514] 308\n",
+      "scanner [-886 -627  438] 321\n",
+      "scanner [ 385  700 -524] 321\n",
+      "scanner [-462  585 -378] 321\n",
+      "scanner [ 887 -541  259] 321\n",
+      "scanner [ 681  576 -763] 321\n",
+      "scanner [-863  533 -771] 321\n",
+      "scanner [458 528 759] 321\n",
+      "scanner [-623  627  873] 321\n",
+      "scanner [125 -50  43] 321\n",
+      "scanner [ 704 -633  783] 321\n",
+      "scanner [-635  654  370] 321\n",
+      "scanner [-780  672 -873] 321\n",
+      "scanner [ 609  700 -441] 321\n",
+      "scanner [537 351 808] 321\n",
+      "scanner [531 706 891] 321\n",
+      "scanner [ 845  541 -613] 321\n",
+      "scanner [-886 -627  438] 321\n",
+      "scanner [ 385  700 -524] 321\n",
+      "scanner [-462  585 -378] 321\n",
+      "scanner [ 887 -541  259] 321\n",
+      "scanner [ 681  576 -763] 321\n",
+      "scanner [-863  533 -771] 321\n",
+      "scanner [458 528 759] 321\n",
+      "scanner [-623  627  873] 321\n",
+      "scanner [125 -50  43] 321\n",
+      "scanner [ 704 -633  783] 321\n",
+      "scanner [-635  654  370] 321\n",
+      "scanner [-780  672 -873] 321\n",
+      "scanner [ 609  700 -441] 321\n",
+      "scanner [537 351 808] 321\n",
+      "scanner [531 706 891] 321\n",
+      "scanner [ 845  541 -613] 321\n",
+      "scanner [-886 -627  438] 321\n",
+      "scanner [ 385  700 -524] 321\n",
+      "scanner [-462  585 -378] 321\n",
+      "scanner [ 887 -541  259] 321\n",
+      "scanner [ 681  576 -763] 321\n",
+      "scanner [-863  533 -771] 321\n",
+      "scanner [458 528 759] 321\n",
+      "scanner [-623  627  873] 321\n",
+      "scanner [125 -50  43] 321\n",
+      "scanner [ 704 -633  783] 321\n",
+      "scanner [-635  654  370] 321\n",
+      "scanner [-780  672 -873] 321\n",
+      "scanner [ 609  700 -441] 321\n",
+      "scanner [537 351 808] 321\n",
+      "scanner [531 706 891] 321\n",
+      "scanner [ 845  541 -613] 321\n",
+      "scanner [-886 -627  438] 321\n",
+      "scanner [ 385  700 -524] 321\n",
+      "scanner [-462  585 -378] 321\n",
+      "scanner [ 887 -541  259] 321\n",
+      "scanner [ 681  576 -763] 321\n",
+      "scanner [-863  533 -771] 321\n",
+      "scanner [458 528 759] 321\n",
+      "scanner [-623  627  873] 321\n",
+      "scanner [125 -50  43] 321\n",
+      "scanner [ 704 -633  783] 321\n",
+      "scanner [-635  654  370] 321\n",
+      "scanner [-780  672 -873] 321\n",
+      "scanner [ 609  700 -441] 321\n",
+      "scanner [537 351 808] 321\n",
+      "scanner [531 706 891] 321\n",
+      "scanner [ 845  541 -613] 321\n",
+      "scanner [-886 -627  438] 321\n",
+      "scanner [ 385  700 -524] 321\n"
      ]
     }
    ],
@@ -2095,17 +2348,29 @@
     "      if np.unique(translation).size <= 3:\n",
     "        return rotation, translation[:, 0]\n",
     "\n",
+    "def join_beacons(a: np.array, b: list[np.array], collisions: list[tuple[int, int]], rotation: np.array, translation: np.array) -> np.array:\n",
+    "  extant = set([c[1] for c in collisions])\n",
+    "  new = np.vstack([np.array(b[i]) for i in range(len(b)) if i not in extant]).T\n",
+    "  result = (rotation@new).T + translation\n",
+    "  return np.vstack([a, result])\n",
+    "\n",
     "def day19(data: list):\n",
-    "  a = data[0]\n",
-    "  ad = gen_distances(a)\n",
-    "  b = data[1]\n",
-    "  bd = gen_distances(b)\n",
-    "  collisions = detect_collisions(ad, bd)\n",
-    "  rotation, translation = determine_transformation(a, b, collisions)\n",
+    "  beacons = np.array(data[0])\n",
+    "  distances = gen_distances(beacons)\n",
+    "  q = deque(data[1:])\n",
     "\n",
-    "  print(rotation, translation)\n",
-    "  # for i, v, in enumerate(data):\n",
-    "\n",
+    "  while q:\n",
+    "    scanner = q.pop()\n",
+    "    print('scanner', scanner[0], len(distances), len(q))\n",
+    "    d = gen_distances(scanner)\n",
+    "    collisions = detect_collisions(distances, d)\n",
+    "    if not collisions:\n",
+    "      q.appendleft(scanner)\n",
+    "      continue\n",
+    "    rotation, translation = determine_transformation(beacons, scanner, collisions)\n",
+    "    beacons = join_beacons(beacons, scanner, collisions, rotation, translation)\n",
+    "    distances = gen_distances(beacons) # TODO: run this as part of join_beacons\n",
+    "  print(len(beacons))\n",
     "\n",
     "day19(data19)"
    ]
