--- a/ipynb/2021.ipynb
+++ b/ipynb/2021.ipynb
@@ -2029,7 +2029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2053,285 +2053,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "scanner [-686 -725 -427] 26\n",
-      "scanner [-771 -358  508] 26\n",
-      "scanner [-710 -818  544] 26\n",
-      "scanner [ 609  700 -441] 26\n",
-      "scanner [537 351 808] 26\n",
-      "scanner [531 706 891] 26\n",
-      "scanner [ 561  525 -401] 26\n",
-      "scanner [-504 -662  562] 26\n",
-      "scanner [ 748  739 -711] 26\n",
-      "scanner [-769 -495 -877] 26\n",
-      "scanner [90  6 56] 26\n",
-      "scanner [-449 -332  749] 41\n",
-      "scanner [ 845  541 -613] 41\n",
-      "scanner [-482 -652 -465] 41\n",
-      "scanner [ 256  433 -509] 41\n",
-      "scanner [ 791 -635 -514] 41\n",
-      "scanner [ 368 -350  569] 41\n",
-      "scanner [-886 -627  438] 41\n",
-      "scanner [ 385  700 -524] 41\n",
-      "scanner [ 475 -845 -568] 41\n",
-      "scanner [ 526 -799 -839] 41\n",
-      "scanner [-462  585 -378] 41\n",
-      "scanner [683 867 477] 41\n",
-      "scanner [ 887 -541  259] 41\n",
-      "scanner [ 12 -48 -13] 41\n",
-      "scanner [943 764 440] 41\n",
-      "scanner [ 681  576 -763] 41\n",
-      "scanner [-863  533 -771] 41\n",
-      "scanner [458 528 759] 41\n",
-      "scanner [-833 -573 -767] 41\n",
-      "scanner [-99 117  -7] 41\n",
-      "scanner [-623  627  873] 41\n",
-      "scanner [125 -50  43] 41\n",
-      "scanner [ 704 -633  783] 41\n",
-      "scanner [-635  654  370] 41\n",
-      "scanner [-780  672 -873] 41\n",
-      "scanner [ 476 -305  615] 41\n",
-      "scanner [-686 -725 -427] 41\n",
-      "scanner [-771 -358  508] 41\n",
-      "scanner [-710 -818  544] 41\n",
-      "scanner [ 609  700 -441] 41\n",
-      "scanner [537 351 808] 41\n",
-      "scanner [531 706 891] 41\n",
-      "scanner [ 561  525 -401] 41\n",
-      "scanner [-504 -662  562] 41\n",
-      "scanner [ 748  739 -711] 41\n",
-      "scanner [-769 -495 -877] 41\n",
-      "scanner [-449 -332  749] 55\n",
-      "scanner [ 845  541 -613] 55\n",
-      "scanner [-482 -652 -465] 55\n",
-      "scanner [ 256  433 -509] 55\n",
-      "scanner [ 791 -635 -514] 55\n",
-      "scanner [ 368 -350  569] 55\n",
-      "scanner [-886 -627  438] 55\n",
-      "scanner [ 385  700 -524] 55\n",
-      "scanner [ 475 -845 -568] 55\n",
-      "scanner [ 526 -799 -839] 55\n",
-      "scanner [-462  585 -378] 55\n",
-      "scanner [683 867 477] 55\n",
-      "scanner [ 887 -541  259] 55\n",
-      "scanner [ 12 -48 -13] 55\n",
-      "scanner [943 764 440] 55\n",
-      "scanner [ 681  576 -763] 55\n",
-      "scanner [-863  533 -771] 55\n",
-      "scanner [458 528 759] 55\n",
-      "scanner [-833 -573 -767] 55\n",
-      "scanner [-99 117  -7] 55\n",
-      "scanner [-623  627  873] 55\n",
-      "scanner [125 -50  43] 55\n",
-      "scanner [ 704 -633  783] 55\n",
-      "scanner [-635  654  370] 55\n",
-      "scanner [-780  672 -873] 55\n",
-      "scanner [ 476 -305  615] 55\n",
-      "scanner [-686 -725 -427] 55\n",
-      "scanner [-771 -358  508] 55\n",
-      "scanner [-710 -818  544] 55\n",
-      "scanner [ 609  700 -441] 55\n",
-      "scanner [537 351 808] 55\n",
-      "scanner [531 706 891] 55\n",
-      "scanner [ 561  525 -401] 55\n",
-      "scanner [-504 -662  562] 55\n",
-      "scanner [ 748  739 -711] 69\n",
-      "scanner [-449 -332  749] 69\n",
-      "scanner [ 845  541 -613] 69\n",
-      "scanner [-482 -652 -465] 69\n",
-      "scanner [ 256  433 -509] 69\n",
-      "scanner [ 791 -635 -514] 69\n",
-      "scanner [ 368 -350  569] 69\n",
-      "scanner [-886 -627  438] 69\n",
-      "scanner [ 385  700 -524] 69\n",
-      "scanner [ 475 -845 -568] 69\n",
-      "scanner [ 526 -799 -839] 83\n",
-      "scanner [-462  585 -378] 96\n",
-      "scanner [683 867 477] 96\n",
-      "scanner [ 887 -541  259] 110\n",
-      "scanner [ 12 -48 -13] 110\n",
-      "scanner [943 764 440] 110\n",
-      "scanner [ 681  576 -763] 110\n",
-      "scanner [-863  533 -771] 110\n",
-      "scanner [458 528 759] 110\n",
-      "scanner [-833 -573 -767] 110\n",
-      "scanner [-99 117  -7] 110\n",
-      "scanner [-623  627  873] 110\n",
-      "scanner [125 -50  43] 110\n",
-      "scanner [ 704 -633  783] 110\n",
-      "scanner [-635  654  370] 110\n",
-      "scanner [-780  672 -873] 110\n",
-      "scanner [ 476 -305  615] 110\n",
-      "scanner [-686 -725 -427] 110\n",
-      "scanner [-771 -358  508] 110\n",
-      "scanner [-710 -818  544] 110\n",
-      "scanner [ 609  700 -441] 110\n",
-      "scanner [537 351 808] 110\n",
-      "scanner [531 706 891] 110\n",
-      "scanner [ 561  525 -401] 110\n",
-      "scanner [ 748  739 -711] 124\n",
-      "scanner [-449 -332  749] 124\n",
-      "scanner [ 845  541 -613] 138\n",
-      "scanner [-482 -652 -465] 138\n",
-      "scanner [ 256  433 -509] 138\n",
-      "scanner [ 791 -635 -514] 138\n",
-      "scanner [ 368 -350  569] 138\n",
-      "scanner [-886 -627  438] 138\n",
-      "scanner [ 385  700 -524] 138\n",
-      "scanner [-462  585 -378] 138\n",
-      "scanner [ 887 -541  259] 138\n",
-      "scanner [ 12 -48 -13] 138\n",
-      "scanner [943 764 440] 138\n",
-      "scanner [ 681  576 -763] 152\n",
-      "scanner [-863  533 -771] 152\n",
-      "scanner [458 528 759] 152\n",
-      "scanner [-833 -573 -767] 152\n",
-      "scanner [-99 117  -7] 166\n",
-      "scanner [-623  627  873] 166\n",
-      "scanner [125 -50  43] 166\n",
-      "scanner [ 704 -633  783] 166\n",
-      "scanner [-635  654  370] 166\n",
-      "scanner [-780  672 -873] 166\n",
-      "scanner [ 476 -305  615] 166\n",
-      "scanner [-686 -725 -427] 180\n",
-      "scanner [-771 -358  508] 194\n",
-      "scanner [-710 -818  544] 208\n",
-      "scanner [ 609  700 -441] 222\n",
-      "scanner [537 351 808] 222\n",
-      "scanner [531 706 891] 222\n",
-      "scanner [ 748  739 -711] 222\n",
-      "scanner [ 845  541 -613] 236\n",
-      "scanner [-482 -652 -465] 236\n",
-      "scanner [ 256  433 -509] 250\n",
-      "scanner [ 791 -635 -514] 265\n",
-      "scanner [ 368 -350  569] 265\n",
-      "scanner [-886 -627  438] 280\n",
-      "scanner [ 385  700 -524] 280\n",
-      "scanner [-462  585 -378] 280\n",
-      "scanner [ 887 -541  259] 280\n",
-      "scanner [ 12 -48 -13] 280\n",
-      "scanner [ 681  576 -763] 280\n",
-      "scanner [-863  533 -771] 280\n",
-      "scanner [458 528 759] 280\n",
-      "scanner [-99 117  -7] 280\n",
-      "scanner [-623  627  873] 294\n",
-      "scanner [125 -50  43] 294\n",
-      "scanner [ 704 -633  783] 294\n",
-      "scanner [-635  654  370] 294\n",
-      "scanner [-780  672 -873] 294\n",
-      "scanner [ 609  700 -441] 294\n",
-      "scanner [537 351 808] 294\n",
-      "scanner [531 706 891] 294\n",
-      "scanner [ 845  541 -613] 294\n",
-      "scanner [ 791 -635 -514] 294\n",
-      "scanner [-886 -627  438] 294\n",
-      "scanner [ 385  700 -524] 294\n",
-      "scanner [-462  585 -378] 294\n",
-      "scanner [ 887 -541  259] 294\n",
-      "scanner [ 12 -48 -13] 294\n",
-      "scanner [ 681  576 -763] 308\n",
-      "scanner [-863  533 -771] 308\n",
-      "scanner [458 528 759] 308\n",
-      "scanner [-623  627  873] 308\n",
-      "scanner [125 -50  43] 308\n",
-      "scanner [ 704 -633  783] 308\n",
-      "scanner [-635  654  370] 308\n",
-      "scanner [-780  672 -873] 308\n",
-      "scanner [ 609  700 -441] 308\n",
-      "scanner [537 351 808] 308\n",
-      "scanner [531 706 891] 308\n",
-      "scanner [ 845  541 -613] 308\n",
-      "scanner [ 791 -635 -514] 308\n",
-      "scanner [-886 -627  438] 321\n",
-      "scanner [ 385  700 -524] 321\n",
-      "scanner [-462  585 -378] 321\n",
-      "scanner [ 887 -541  259] 321\n",
-      "scanner [ 681  576 -763] 321\n",
-      "scanner [-863  533 -771] 321\n",
-      "scanner [458 528 759] 321\n",
-      "scanner [-623  627  873] 321\n",
-      "scanner [125 -50  43] 321\n",
-      "scanner [ 704 -633  783] 321\n",
-      "scanner [-635  654  370] 321\n",
-      "scanner [-780  672 -873] 321\n",
-      "scanner [ 609  700 -441] 321\n",
-      "scanner [537 351 808] 321\n",
-      "scanner [531 706 891] 321\n",
-      "scanner [ 845  541 -613] 321\n",
-      "scanner [-886 -627  438] 321\n",
-      "scanner [ 385  700 -524] 321\n",
-      "scanner [-462  585 -378] 321\n",
-      "scanner [ 887 -541  259] 321\n",
-      "scanner [ 681  576 -763] 321\n",
-      "scanner [-863  533 -771] 321\n",
-      "scanner [458 528 759] 321\n",
-      "scanner [-623  627  873] 321\n",
-      "scanner [125 -50  43] 321\n",
-      "scanner [ 704 -633  783] 321\n",
-      "scanner [-635  654  370] 321\n",
-      "scanner [-780  672 -873] 321\n",
-      "scanner [ 609  700 -441] 321\n",
-      "scanner [537 351 808] 321\n",
-      "scanner [531 706 891] 321\n",
-      "scanner [ 845  541 -613] 321\n",
-      "scanner [-886 -627  438] 321\n",
-      "scanner [ 385  700 -524] 321\n",
-      "scanner [-462  585 -378] 321\n",
-      "scanner [ 887 -541  259] 321\n",
-      "scanner [ 681  576 -763] 321\n",
-      "scanner [-863  533 -771] 321\n",
-      "scanner [458 528 759] 321\n",
-      "scanner [-623  627  873] 321\n",
-      "scanner [125 -50  43] 321\n",
-      "scanner [ 704 -633  783] 321\n",
-      "scanner [-635  654  370] 321\n",
-      "scanner [-780  672 -873] 321\n",
-      "scanner [ 609  700 -441] 321\n",
-      "scanner [537 351 808] 321\n",
-      "scanner [531 706 891] 321\n",
-      "scanner [ 845  541 -613] 321\n",
-      "scanner [-886 -627  438] 321\n",
-      "scanner [ 385  700 -524] 321\n",
-      "scanner [-462  585 -378] 321\n",
-      "scanner [ 887 -541  259] 321\n",
-      "scanner [ 681  576 -763] 321\n",
-      "scanner [-863  533 -771] 321\n",
-      "scanner [458 528 759] 321\n",
-      "scanner [-623  627  873] 321\n",
-      "scanner [125 -50  43] 321\n",
-      "scanner [ 704 -633  783] 321\n",
-      "scanner [-635  654  370] 321\n",
-      "scanner [-780  672 -873] 321\n",
-      "scanner [ 609  700 -441] 321\n",
-      "scanner [537 351 808] 321\n",
-      "scanner [531 706 891] 321\n",
-      "scanner [ 845  541 -613] 321\n",
-      "scanner [-886 -627  438] 321\n",
-      "scanner [ 385  700 -524] 321\n"
+      "here 34 0\n",
+      "here 31 1\n",
+      "here 17 2\n",
+      "here 1 3\n",
+      "here 0 4\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "472"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "# TODO: optimize - create only upper triangle\n",
     "def gen_distances(data: list[Position]) -> np.array:\n",
     "  distances = np.zeros((len(data), len(data)))\n",
     "  for i, j in itertools.combinations(range(len(data)), 2):\n",
-    "    distance = np.linalg.norm(data[i] - data[j])\n",
+    "    distance = np.round(np.linalg.norm(data[i] - data[j]), 5)\n",
     "    distances[i, j] = distance\n",
     "    distances[j, i] = distance\n",
     "  return distances\n",
-    "\n",
-    "def detect_collisions(a: np.array, b: np.array) -> np.array:\n",
+    "# TODO: optimize - search only upper triangle\n",
+    "def detect_collisions(a: np.array, b: np.array, debug = False) -> np.array:\n",
     "  result = []\n",
     "  for i, target in enumerate(a):\n",
     "    for j, candidate in enumerate(b):\n",
     "      collisions = set(target).intersection(set(candidate))\n",
-    "      if len(collisions) == 12:\n",
+    "      if debug and len(collisions) > 1:\n",
+    "        print('coll', len(collisions))\n",
+    "      if len(collisions) >= 12:\n",
     "        result.append((i, j))\n",
     "  return result\n",
     "\n",
@@ -2354,25 +2118,199 @@
     "  result = (rotation@new).T + translation\n",
     "  return np.vstack([a, result])\n",
     "\n",
-    "def day19(data: list):\n",
+    "def merge_scanners(data: list[list[Position]], debug=False):\n",
+    "  todo = []\n",
     "  beacons = np.array(data[0])\n",
-    "  distances = gen_distances(beacons)\n",
-    "  q = deque(data[1:])\n",
-    "\n",
-    "  while q:\n",
-    "    scanner = q.pop()\n",
-    "    print('scanner', scanner[0], len(distances), len(q))\n",
+    "  for scanner in data[1:]:\n",
+    "    distances = gen_distances(beacons) # TODO: run this as part of join_beacons\n",
     "    d = gen_distances(scanner)\n",
-    "    collisions = detect_collisions(distances, d)\n",
+    "    collisions = detect_collisions(distances, d, debug)\n",
+    "    if debug:\n",
+    "      print('wtf', collisions)\n",
     "    if not collisions:\n",
-    "      q.appendleft(scanner)\n",
+    "    # if len(collisions) < 3:\n",
+    "      todo.append(scanner)\n",
     "      continue\n",
     "    rotation, translation = determine_transformation(beacons, scanner, collisions)\n",
     "    beacons = join_beacons(beacons, scanner, collisions, rotation, translation)\n",
-    "    distances = gen_distances(beacons) # TODO: run this as part of join_beacons\n",
-    "  print(len(beacons))\n",
+    "  return beacons, todo\n",
+    "\n",
+    "def merge_all_scanners(data: list[list[Position]]):\n",
+    "    beacons, todo = merge_scanners(data)\n",
+    "    for i in range(15):\n",
+    "      print('here', len(todo), i)\n",
+    "      if not todo:\n",
+    "        break\n",
+    "      beacons, todo = merge_scanners([beacons] + todo)# + [beacons])\n",
+    "    return beacons\n",
+    "\n",
+    "def day19(data: list[list[Position]]):\n",
+    "  beacons = merge_all_scanners(data)\n",
+    "  return len(beacons)\n",
     "\n",
     "day19(data19)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "here 34 0\n",
+      "here 28 1\n",
+      "here 27 2\n",
+      "here 23 3\n",
+      "here 20 4\n",
+      "here 16 5\n",
+      "here 13 6\n",
+      "here 11 7\n",
+      "here 5 8\n",
+      "here 3 9\n",
+      "here 1 10\n",
+      "here 0 11\n"
+     ]
+    }
+   ],
+   "source": [
+    "beacons = merge_all_scanners(data19)\n",
+    "def max_manhattan_distances(data: list[Position]) -> np.array:\n",
+    "  max_man = 0\n",
+    "  for i, j in itertools.combinations(range(len(data)), 2):\n",
+    "    # print(data[i], data[j], data[i] - data[j])\n",
+    "    distance = np.abs(data[i] - data[j]).sum()\n",
+    "    if distance > max_man:\n",
+    "      print(data[i], data[j], distance)\n",
+    "      max_man = distance\n",
+    "      # break\n",
+    "  return max_man\n",
+    "\n",
+    "max_manhattan_distances(beacons)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "here 1 0\n",
+      "here 0 1\n",
+      "[649. 640. 665.] [ 682. -795.  504.] 1629.0\n",
+      "[649. 640. 665.] [-784.  533. -524.] 2729.0\n",
+      "[649. 640. 665.] [-588. -843.  648.] 2737.0\n",
+      "[649. 640. 665.] [-675. -892. -343.] 3864.0\n",
+      "[649. 640. 665.] [-742. -814. -386.] 3896.0\n",
+      "[649. 640. 665.] [ 1689. -1786.  2073.] 4874.0\n",
+      "[649. 640. 665.] [ 1794. -1759.  2050.] 4929.0\n",
+      "[649. 640. 665.] [ 1894. -1780.  2105.] 5105.0\n",
+      "[649. 640. 665.] [ 1802. -1918. -1867.] 6243.0\n",
+      "[649. 640. 665.] [ 1759. -1982. -1953.] 6350.0\n",
+      "[-784.  533. -524.] [ 1689. -1786.  2073.] 7389.0\n",
+      "[-784.  533. -524.] [ 1794. -1759.  2050.] 7444.0\n",
+      "[-784.  533. -524.] [ 1894. -1780.  2105.] 7620.0\n",
+      "[-674.  560.  763.] [ 1759. -1982. -1953.] 7691.0\n",
+      "[-889.  563. -600.] [ 1894. -1780.  2105.] 7831.0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "7831.0"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day19_2(data: list[list[Position]]):\n",
+    "  beacons = merge_all_scanners(data)\n",
+    "  return max_manhattan_distances(beacons)\n",
+    "\n",
+    "day19_2(data19)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  748.   739.  -711.]\n",
+      " [ -548.   605.  -645.]\n",
+      " [  693.   668.   509.]\n",
+      " ...\n",
+      " [ 6683. -1820. -5312.]\n",
+      " [ 6364.  -469. -5340.]\n",
+      " [ 4843. -1107. -4746.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(beacons)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[   0.         1304.57962578 1223.30127115 ... 7933.59357416\n",
+      "  7377.42238184 6038.04322608]\n",
+      " [1304.57962578    0.         1695.80836181 ... 8941.41347886\n",
+      "  8424.50265594 6986.56038405]\n",
+      " [1223.30127115 1695.80836181    0.         ... 8715.17555761\n",
+      "  8225.80154149 6927.3479774 ]\n",
+      " ...\n",
+      " [7933.59357416 8941.41347886 8715.17555761 ...    0.\n",
+      "  1388.4329296  2052.88212034]\n",
+      " [7377.42238184 8424.50265594 8225.80154149 ... 1388.4329296\n",
+      "     0.         1753.08898804]\n",
+      " [6038.04322608 6986.56038405 6927.3479774  ... 2052.88212034\n",
+      "  1753.08898804    0.        ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(distances)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.11"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day19_2(data: list[list[Position]]):\n",
+    "  beacons = merge_all_scanners(data)\n",
+    "  distances = gen_distances(beacons)\n",
+    "  return np.max(distances)"
    ]
   }
  ],
