--- a/ipynb/2021.ipynb
+++ b/ipynb/2021.ipynb
@@ -2029,23 +2029,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "Position = tuple[int, int, int]\n",
     "\n",
     "def format19(data: list[str]) -> list[list[Position]]:\n",
-    "  scanners, scanner = [], []\n",
+    "  scanners, scanner, number = [], [], -1\n",
     "  for line in data:\n",
     "    if 'scanner' in line:\n",
+    "      number += 1 # TODO: fix hack\n",
     "      continue\n",
     "    if not line:\n",
-    "      scanners.append(scanner)\n",
+    "      scanners.append((number, scanner))\n",
     "      scanner = []\n",
     "    else:\n",
     "      scanner.append(np.array([int(x) for x in line.split(',')]))\n",
-    "  scanners.append(scanner)\n",
+    "  scanners.append((number, scanner))\n",
     "  return scanners\n",
     "  \n",
     "data19 = format19(data(19))"
@@ -2053,7 +2054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2073,7 +2074,7 @@
        "472"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2118,20 +2119,21 @@
     "  result = (rotation@new).T + translation\n",
     "  return np.vstack([a, result])\n",
     "\n",
+    "part2 = [] # TODO: fix hack\n",
     "def merge_scanners(data: list[list[Position]], debug=False):\n",
     "  todo = []\n",
-    "  beacons = np.array(data[0])\n",
-    "  for scanner in data[1:]:\n",
+    "  beacons = np.array(data[0][1])\n",
+    "  for number, scanner in data[1:]:\n",
     "    distances = gen_distances(beacons) # TODO: run this as part of join_beacons\n",
     "    d = gen_distances(scanner)\n",
     "    collisions = detect_collisions(distances, d, debug)\n",
     "    if debug:\n",
     "      print('wtf', collisions)\n",
     "    if not collisions:\n",
-    "    # if len(collisions) < 3:\n",
-    "      todo.append(scanner)\n",
+    "      todo.append((number, scanner))\n",
     "      continue\n",
     "    rotation, translation = determine_transformation(beacons, scanner, collisions)\n",
+    "    part2.append((number, rotation, translation)) # TODO: fix hack\n",
     "    beacons = join_beacons(beacons, scanner, collisions, rotation, translation)\n",
     "  return beacons, todo\n",
     "\n",
@@ -2141,7 +2143,7 @@
     "      print('here', len(todo), i)\n",
     "      if not todo:\n",
     "        break\n",
-    "      beacons, todo = merge_scanners([beacons] + todo)# + [beacons])\n",
+    "      beacons, todo = merge_scanners([(0, beacons)] + todo)# + [beacons])\n",
     "    return beacons\n",
     "\n",
     "def day19(data: list[list[Position]]):\n",
@@ -2153,164 +2155,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "here 34 0\n",
-      "here 28 1\n",
-      "here 27 2\n",
-      "here 23 3\n",
-      "here 20 4\n",
-      "here 16 5\n",
-      "here 13 6\n",
-      "here 11 7\n",
-      "here 5 8\n",
-      "here 3 9\n",
-      "here 1 10\n",
-      "here 0 11\n"
-     ]
+     "data": {
+      "text/plain": [
+       "12092.0"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "beacons = merge_all_scanners(data19)\n",
     "def max_manhattan_distances(data: list[Position]) -> np.array:\n",
     "  max_man = 0\n",
     "  for i, j in itertools.combinations(range(len(data)), 2):\n",
-    "    # print(data[i], data[j], data[i] - data[j])\n",
     "    distance = np.abs(data[i] - data[j]).sum()\n",
     "    if distance > max_man:\n",
-    "      print(data[i], data[j], distance)\n",
     "      max_man = distance\n",
-    "      # break\n",
     "  return max_man\n",
     "\n",
-    "max_manhattan_distances(beacons)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "here 1 0\n",
-      "here 0 1\n",
-      "[649. 640. 665.] [ 682. -795.  504.] 1629.0\n",
-      "[649. 640. 665.] [-784.  533. -524.] 2729.0\n",
-      "[649. 640. 665.] [-588. -843.  648.] 2737.0\n",
-      "[649. 640. 665.] [-675. -892. -343.] 3864.0\n",
-      "[649. 640. 665.] [-742. -814. -386.] 3896.0\n",
-      "[649. 640. 665.] [ 1689. -1786.  2073.] 4874.0\n",
-      "[649. 640. 665.] [ 1794. -1759.  2050.] 4929.0\n",
-      "[649. 640. 665.] [ 1894. -1780.  2105.] 5105.0\n",
-      "[649. 640. 665.] [ 1802. -1918. -1867.] 6243.0\n",
-      "[649. 640. 665.] [ 1759. -1982. -1953.] 6350.0\n",
-      "[-784.  533. -524.] [ 1689. -1786.  2073.] 7389.0\n",
-      "[-784.  533. -524.] [ 1794. -1759.  2050.] 7444.0\n",
-      "[-784.  533. -524.] [ 1894. -1780.  2105.] 7620.0\n",
-      "[-674.  560.  763.] [ 1759. -1982. -1953.] 7691.0\n",
-      "[-889.  563. -600.] [ 1894. -1780.  2105.] 7831.0\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "7831.0"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "def day19_2(data: list[list[Position]]):\n",
-    "  beacons = merge_all_scanners(data)\n",
-    "  return max_manhattan_distances(beacons)\n",
+    "  positions = [x[2] for x in part2] + np.array([0,0,0])\n",
+    "  return max_manhattan_distances(positions)\n",
     "\n",
     "day19_2(data19)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[  748.   739.  -711.]\n",
-      " [ -548.   605.  -645.]\n",
-      " [  693.   668.   509.]\n",
-      " ...\n",
-      " [ 6683. -1820. -5312.]\n",
-      " [ 6364.  -469. -5340.]\n",
-      " [ 4843. -1107. -4746.]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(beacons)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[   0.         1304.57962578 1223.30127115 ... 7933.59357416\n",
-      "  7377.42238184 6038.04322608]\n",
-      " [1304.57962578    0.         1695.80836181 ... 8941.41347886\n",
-      "  8424.50265594 6986.56038405]\n",
-      " [1223.30127115 1695.80836181    0.         ... 8715.17555761\n",
-      "  8225.80154149 6927.3479774 ]\n",
-      " ...\n",
-      " [7933.59357416 8941.41347886 8715.17555761 ...    0.\n",
-      "  1388.4329296  2052.88212034]\n",
-      " [7377.42238184 8424.50265594 8225.80154149 ... 1388.4329296\n",
-      "     0.         1753.08898804]\n",
-      " [6038.04322608 6986.56038405 6927.3479774  ... 2052.88212034\n",
-      "  1753.08898804    0.        ]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(distances)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.11"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def day19_2(data: list[list[Position]]):\n",
-    "  beacons = merge_all_scanners(data)\n",
-    "  distances = gen_distances(beacons)\n",
-    "  return np.max(distances)"
    ]
   }
  ],
