--- a/ipynb/2021.ipynb
+++ b/ipynb/2021.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,6 +31,7 @@
     "import numpy.typing as npt\n",
     "import networkx as nx\n",
     "import re\n",
+    "from scipy import spatial\n",
     "from typing import Callable, TypeVar, Union, Optional\n",
     "\n",
     "T = TypeVar('T')\n",
@@ -2024,88 +2025,94 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Day 19"
+    "## Day 19\n",
+    "\n",
+    "Matrix operations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
     "Position = tuple[int, int, int]\n",
+    "Distances = np.array\n",
+    "Collision = Position\n",
     "\n",
-    "def format19(data: list[str]) -> list[list[Position]]:\n",
-    "  scanners, scanner, number = [], [], -1\n",
+    "class Scanner:\n",
+    "  def __init__(self, positions: list[Position]):\n",
+    "    self.beacons = positions\n",
+    "    self.orientation = None\n",
+    "    self.position = None\n",
+    "    self.distances = self._distances()\n",
+    "\n",
+    "  def _distances(self):\n",
+    "    return spatial.distance_matrix(list(self.beacons), list(self.beacons))\n",
+    "\n",
+    "  def add_scanner(self, new: 'Scanner'):\n",
+    "    beacons = set(self.beacons)\n",
+    "    transformed = ((new.orientation@np.array(list(new.beacons)).T).T + new.position)\n",
+    "    for beacon in transformed:\n",
+    "      beacons.add(tuple(beacon))\n",
+    "    self.beacons = list(beacons)\n",
+    "    self.distances = self._distances()\n",
+    "\n",
+    "  def set_position(self, orientation: np.array, position: np.array):\n",
+    "    self.orientation = orientation\n",
+    "    self.position = position\n",
+    "\n",
+    "def parse_scanners(data: list[str]) -> list[list[Position]]:\n",
+    "  scanners, positions = [], []\n",
     "  for line in data:\n",
     "    if 'scanner' in line:\n",
-    "      number += 1 # TODO: fix hack\n",
     "      continue\n",
     "    if not line:\n",
-    "      scanners.append((number, scanner))\n",
-    "      scanner = []\n",
+    "      scanners.append(Scanner(positions))\n",
+    "      positions = []\n",
     "    else:\n",
-    "      scanner.append(np.array([int(x) for x in line.split(',')]))\n",
-    "  scanners.append((number, scanner))\n",
+    "      positions.append(tuple([int(x) for x in line.split(',')]))\n",
+    "  scanners.append(Scanner(positions))\n",
     "  return scanners\n",
-    "  \n",
-    "data19 = format19(data(19))"
+    "\n",
+    "data19 = parse_scanners(data(19))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "here 34 0\n",
-      "here 31 1\n",
-      "here 17 2\n",
-      "here 1 3\n",
-      "here 0 4\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "472"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# TODO: optimize - create only upper triangle\n",
-    "def gen_distances(data: list[Position]) -> np.array:\n",
-    "  distances = np.zeros((len(data), len(data)))\n",
-    "  for i, j in itertools.combinations(range(len(data)), 2):\n",
-    "    distance = np.round(np.linalg.norm(data[i] - data[j]), 5)\n",
-    "    distances[i, j] = distance\n",
-    "    distances[j, i] = distance\n",
-    "  return distances\n",
     "# TODO: optimize - search only upper triangle\n",
-    "def detect_collisions(a: np.array, b: np.array, debug = False) -> np.array:\n",
+    "def detect_collisions(a: Distances, b: Distances) -> list[Collision]:\n",
     "  result = []\n",
     "  for i, target in enumerate(a):\n",
     "    for j, candidate in enumerate(b):\n",
     "      collisions = set(target).intersection(set(candidate))\n",
-    "      if debug and len(collisions) > 1:\n",
-    "        print('coll', len(collisions))\n",
     "      if len(collisions) >= 12:\n",
     "        result.append((i, j))\n",
+    "      if len(result) >= 3:\n",
+    "        break # Already found enough collisions to solve\n",
     "  return result\n",
     "\n",
-    "def determine_transformation(a: list[np.array], b: list[np.array], collisions: list[tuple[int, int]]) -> np.array:\n",
-    "  Y = np.vstack([np.array(a[i[0]]) for i in collisions]).T\n",
-    "  X = np.vstack([np.array(b[i[1]]) for i in collisions]).T\n",
+    "def determine_transformation(a: Scanner, b: Scanner, collisions: list[Collision]) -> tuple[np.array, np.array]:\n",
+    "  Y = np.vstack([np.array(a.beacons[i[0]]) for i in collisions]).T\n",
+    "  X = np.vstack([np.array(b.beacons[i[1]]) for i in collisions]).T\n",
     "  for signs in itertools.product([-1, 1], repeat=3):\n",
     "    r = np.identity(3)*np.array(signs)\n",
-    "    # Note: this produces double the results - too lazy to fix\n",
+    "    # TODO: this produces double the results - too lazy to fix\n",
     "    for x, y, z in itertools.permutations([0, 1, 2], 3):\n",
     "      rotation = np.array([r[x], r[y], r[z]])\n",
     "      rotated = rotation@X\n",
@@ -2113,58 +2120,43 @@
     "      if np.unique(translation).size <= 3:\n",
     "        return rotation, translation[:, 0]\n",
     "\n",
-    "def join_beacons(a: np.array, b: list[np.array], collisions: list[tuple[int, int]], rotation: np.array, translation: np.array) -> np.array:\n",
-    "  extant = set([c[1] for c in collisions])\n",
-    "  new = np.vstack([np.array(b[i]) for i in range(len(b)) if i not in extant]).T\n",
-    "  result = (rotation@new).T + translation\n",
-    "  return np.vstack([a, result])\n",
-    "\n",
-    "part2 = [] # TODO: fix hack\n",
-    "def merge_scanners(data: list[list[Position]], debug=False):\n",
-    "  todo = []\n",
-    "  beacons = np.array(data[0][1])\n",
-    "  for number, scanner in data[1:]:\n",
-    "    distances = gen_distances(beacons) # TODO: run this as part of join_beacons\n",
-    "    d = gen_distances(scanner)\n",
-    "    collisions = detect_collisions(distances, d, debug)\n",
-    "    if debug:\n",
-    "      print('wtf', collisions)\n",
+    "def merge_scanners(base: Scanner, scanners: list[Scanner]) -> list[Scanner]:\n",
+    "  remaining = []\n",
+    "  for scanner in scanners:\n",
+    "    collisions = detect_collisions(base.distances, scanner.distances)\n",
     "    if not collisions:\n",
-    "      todo.append((number, scanner))\n",
+    "      remaining.append(scanner)\n",
     "      continue\n",
-    "    rotation, translation = determine_transformation(beacons, scanner, collisions)\n",
-    "    part2.append((number, rotation, translation)) # TODO: fix hack\n",
-    "    beacons = join_beacons(beacons, scanner, collisions, rotation, translation)\n",
-    "  return beacons, todo\n",
+    "    rotation, translation = determine_transformation(base, scanner, collisions)\n",
+    "    scanner.set_position(rotation, translation)\n",
+    "    base.add_scanner(scanner)\n",
+    "  return remaining\n",
     "\n",
-    "def merge_all_scanners(data: list[list[Position]]):\n",
-    "    beacons, todo = merge_scanners(data)\n",
-    "    for i in range(15):\n",
-    "      print('here', len(todo), i)\n",
-    "      if not todo:\n",
-    "        break\n",
-    "      beacons, todo = merge_scanners([(0, beacons)] + todo)# + [beacons])\n",
-    "    return beacons\n",
+    "def merge_all_scanners(data: list[Scanner]):\n",
+    "  base, remaining = data[0], data[1:]\n",
+    "  while remaining:\n",
+    "    remaining = merge_scanners(base, remaining)\n",
+    "  return base\n",
     "\n",
-    "def day19(data: list[list[Position]]):\n",
-    "  beacons = merge_all_scanners(data)\n",
-    "  return len(beacons)\n",
+    "def day19(data: list[Scanner]):\n",
+    "  result = merge_all_scanners(data)\n",
+    "  return len(result.beacons)\n",
     "\n",
-    "day19(data19)"
+    "day19(data19)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "12092.0"
+       "12092"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2173,17 +2165,32 @@
     "def max_manhattan_distances(data: list[Position]) -> np.array:\n",
     "  max_man = 0\n",
     "  for i, j in itertools.combinations(range(len(data)), 2):\n",
-    "    distance = np.abs(data[i] - data[j]).sum()\n",
+    "    distance = int(np.abs(data[i] - data[j]).sum())\n",
     "    if distance > max_man:\n",
     "      max_man = distance\n",
     "  return max_man\n",
     "\n",
-    "def day19_2(data: list[list[Position]]):\n",
-    "  positions = [x[2] for x in part2] + np.array([0,0,0])\n",
+    "# Note: impure - assumes that part 1 already ran\n",
+    "def day19_2(scanners: list[Scanner]):\n",
+    "  positions = [scanner.position for scanner in scanners[1:]] + np.array([0,0,0])\n",
     "  return max_manhattan_distances(positions)\n",
     "\n",
-    "day19_2(data19)\n"
+    "day19_2(data19)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
