complete day 20 part 1

--- a/ipynb/2021.ipynb
+++ b/ipynb/2021.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2147,7 +2147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -2156,7 +2156,7 @@
        "12092"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2187,10 +2187,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data20 = data(20)\n",
+    "\n",
+    "def format20(data: list[str]):\n",
+    "  mapping = [0 if i == '.' else 1 for i in data[0]]\n",
+    "  size = len(data) - 2\n",
+    "  result = np.zeros((size, size), dtype=int)\n",
+    "  for i, line in enumerate(data[2:]):\n",
+    "    for j, item in enumerate(line):\n",
+    "      if item == '#':\n",
+    "        result[i, j] = 1\n",
+    "  return result, mapping\n",
+    "\n",
+    "result, mapping = format20(data20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wtf 0 1\n",
+      "wtf 1 0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5437"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def join_row(row: np.array):\n",
+    "  return ''.join([str(int(x)) for x in row])\n",
+    "\n",
+    "def run_mapping(input: np.array, mapping: list[int]):\n",
+    "  binary = ''.join([join_row(row) for row in input])\n",
+    "  index = bin2int(binary)\n",
+    "  return mapping[index]\n",
+    "\n",
+    "# TODO: optimize using matrix operations\n",
+    "def generate_kernel(input: np.array, x: int, y: int, cval = 0):\n",
+    "  max_x, max_y = input.shape\n",
+    "  kernel = np.zeros((3, 3), dtype=int) if cval == 0 else np.ones((3, 3), dtype=int)\n",
+    "  for j, m in enumerate(range(x-1, x+2)):\n",
+    "    if m < 0 or m >= max_y:\n",
+    "      continue\n",
+    "    for i, k in enumerate(range(y-1, y+2)):\n",
+    "      if k < 0 or k >= max_x:\n",
+    "        continue\n",
+    "      kernel[i, j] = input[k, m]\n",
+    "  return kernel\n",
+    "\n",
+    "# TODO: this should not be necessary\n",
+    "def expand_array(input: np.array, cval = 0):\n",
+    "  shape = input.shape\n",
+    "  new_shape = (shape[0]+2, shape[1]+2)\n",
+    "  result = np.zeros(new_shape, dtype=int) if cval == 0 else np.ones(new_shape, dtype=int)\n",
+    "  result[1:-1, 1:-1] = input\n",
+    "  return result\n",
+    "\n",
+    "def convolve(input: np.array, mapping: list[int], cval = 0, debug=False):\n",
+    "  grid = expand_array(input, cval)\n",
+    "  result = np.zeros(grid.shape) if cval == 0 else np.ones(grid.shape)\n",
+    "  for y, row in enumerate(grid):\n",
+    "    for x, _ in enumerate(row):\n",
+    "      kernel = generate_kernel(grid, x, y, cval)\n",
+    "      result[y, x] = run_mapping(kernel, mapping)\n",
+    "      if debug:\n",
+    "        print(kernel, result[y, x])\n",
+    "  return result\n",
+    "\n",
+    "def update_cval(cval: int, mapping: list[int]):\n",
+    "  return mapping[0] if cval == 0 else mapping[-1]\n",
+    "\n",
+    "def convolve_many(input: np.array, mapping: list[int], n: int):\n",
+    "  cval = 0\n",
+    "  result = input.copy()\n",
+    "  for i in range(n):\n",
+    "    result = convolve(result, mapping, cval)#, i>0)\n",
+    "    cval = update_cval(cval, mapping)\n",
+    "    print('wtf', i, cval)\n",
+    "    np.savetxt(f'output_day20_{i}.txt'.format(i=i), np.where(result > 0, '#', '.'), fmt='%s')\n",
+    "  return result\n",
+    "\n",
+    "def day20(input: np.array, mapping: list[int]):\n",
+    "  result = convolve_many(input, mapping, 2)\n",
+    "  return int(result.sum())\n",
+    "\n",
+    "np.savetxt(f'output_day20.txt', np.where(result > 0, '#', '.'), fmt='%s')\n",
+    "day20(result, mapping)\n"
+   ]
   }
  ],
  "metadata": {
