--- a/ipynb/2021.ipynb
+++ b/ipynb/2021.ipynb
@@ -2187,7 +2187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2208,24 +2208,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "wtf 0 1\n",
-      "wtf 1 0\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "5437"
+       "35"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2280,16 +2272,36 @@
     "  for i in range(n):\n",
     "    result = convolve(result, mapping, cval)#, i>0)\n",
     "    cval = update_cval(cval, mapping)\n",
-    "    print('wtf', i, cval)\n",
-    "    np.savetxt(f'output_day20_{i}.txt'.format(i=i), np.where(result > 0, '#', '.'), fmt='%s')\n",
+    "    print(i)\n",
+    "    # np.savetxt(f'output_day20_{i}.txt'.format(i=i), np.where(result > 0, '#', '.'), fmt='%s')\n",
     "  return result\n",
     "\n",
-    "def day20(input: np.array, mapping: list[int]):\n",
-    "  result = convolve_many(input, mapping, 2)\n",
+    "def day20(input: np.array, mapping: list[int], n=2):\n",
+    "  result = convolve_many(input, mapping, n)\n",
     "  return int(result.sum())\n",
     "\n",
     "np.savetxt(f'output_day20.txt', np.where(result > 0, '#', '.'), fmt='%s')\n",
     "day20(result, mapping)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19340"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day20(result, mapping, 50)"
    ]
   }
  ],
