optimize and refactor

--- a/ipynb/2021.ipynb
+++ b/ipynb/2021.ipynb
@@ -2182,12 +2182,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Day 20"
+    "## Day 20\n",
+    "\n",
+    "convolution"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2208,16 +2210,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "35"
+       "5437"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2226,42 +2228,27 @@
     "def join_row(row: np.array):\n",
     "  return ''.join([str(int(x)) for x in row])\n",
     "\n",
+    "# TODO: use bit tricks\n",
     "def run_mapping(input: np.array, mapping: list[int]):\n",
     "  binary = ''.join([join_row(row) for row in input])\n",
     "  index = bin2int(binary)\n",
     "  return mapping[index]\n",
     "\n",
-    "# TODO: optimize using matrix operations\n",
-    "def generate_kernel(input: np.array, x: int, y: int, cval = 0):\n",
-    "  max_x, max_y = input.shape\n",
-    "  kernel = np.zeros((3, 3), dtype=int) if cval == 0 else np.ones((3, 3), dtype=int)\n",
-    "  for j, m in enumerate(range(x-1, x+2)):\n",
-    "    if m < 0 or m >= max_y:\n",
-    "      continue\n",
-    "    for i, k in enumerate(range(y-1, y+2)):\n",
-    "      if k < 0 or k >= max_x:\n",
-    "        continue\n",
-    "      kernel[i, j] = input[k, m]\n",
-    "  return kernel\n",
+    "def generate_kernel(input: np.array):\n",
+    "  views = np.lib.stride_tricks.sliding_window_view(input, (3, 3))\n",
+    "  for row in views:\n",
+    "    for view in row:\n",
+    "      yield view\n",
     "\n",
-    "# TODO: this should not be necessary\n",
     "def expand_array(input: np.array, cval = 0):\n",
-    "  shape = input.shape\n",
-    "  new_shape = (shape[0]+2, shape[1]+2)\n",
-    "  result = np.zeros(new_shape, dtype=int) if cval == 0 else np.ones(new_shape, dtype=int)\n",
-    "  result[1:-1, 1:-1] = input\n",
-    "  return result\n",
+    "  return np.pad(input, 2, constant_values=cval)\n",
     "\n",
-    "def convolve(input: np.array, mapping: list[int], cval = 0, debug=False):\n",
+    "def convolve(input: np.array, mapping: list[int], cval = 0):\n",
     "  grid = expand_array(input, cval)\n",
-    "  result = np.zeros(grid.shape) if cval == 0 else np.ones(grid.shape)\n",
-    "  for y, row in enumerate(grid):\n",
-    "    for x, _ in enumerate(row):\n",
-    "      kernel = generate_kernel(grid, x, y, cval)\n",
-    "      result[y, x] = run_mapping(kernel, mapping)\n",
-    "      if debug:\n",
-    "        print(kernel, result[y, x])\n",
-    "  return result\n",
+    "  result = []\n",
+    "  for kernel in generate_kernel(grid):\n",
+    "    result.append(run_mapping(kernel, mapping))\n",
+    "  return np.reshape(result, (grid.shape[0]-2, grid.shape[1]-2))\n",
     "\n",
     "def update_cval(cval: int, mapping: list[int]):\n",
     "  return mapping[0] if cval == 0 else mapping[-1]\n",
@@ -2269,24 +2256,21 @@
     "def convolve_many(input: np.array, mapping: list[int], n: int):\n",
     "  cval = 0\n",
     "  result = input.copy()\n",
-    "  for i in range(n):\n",
-    "    result = convolve(result, mapping, cval)#, i>0)\n",
+    "  for _ in range(n):\n",
+    "    result = convolve(result, mapping, cval)\n",
     "    cval = update_cval(cval, mapping)\n",
-    "    print(i)\n",
-    "    # np.savetxt(f'output_day20_{i}.txt'.format(i=i), np.where(result > 0, '#', '.'), fmt='%s')\n",
     "  return result\n",
     "\n",
     "def day20(input: np.array, mapping: list[int], n=2):\n",
     "  result = convolve_many(input, mapping, n)\n",
     "  return int(result.sum())\n",
     "\n",
-    "np.savetxt(f'output_day20.txt', np.where(result > 0, '#', '.'), fmt='%s')\n",
     "day20(result, mapping)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
@@ -2295,14 +2279,29 @@
        "19340"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Note: take slightly longer than 10s\n",
     "day20(result, mapping, 50)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 21"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
