--- a/ipynb/2021.ipynb
+++ b/ipynb/2021.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,10 @@
     "  return int(\"\".join(str(i) for i in l), 2)\n",
     "\n",
     "def triangular_number(n: int) -> int:\n",
-    "  return n * (n + 1) // 2"
+    "  return n * (n + 1) // 2\n",
+    "\n",
+    "def wrap_general(start: int, end: int, num: int) -> int:\n",
+    "  return start + (num - start) % (end - start)"
    ]
   },
   {
@@ -1472,7 +1475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1481,7 +1484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1490,7 +1493,7 @@
        "621"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1519,7 +1522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1528,15 +1531,12 @@
        "2904"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def wrap_general(start: int, end: int, num: int) -> int:\n",
-    "  return start + (num - start) % (end - start)\n",
-    "\n",
     "def wrap(num: int) -> int:\n",
     "  return wrap_general(1, 10, num)\n",
     "\n",
@@ -2294,6 +2294,99 @@
    "metadata": {},
    "source": [
     "## Day 21"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data21 = data(21, lambda x: int(x[-1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wrap_general(1, 10, 15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "739785"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Dice:\n",
+    "  def __init__(self):\n",
+    "    self.count = 0\n",
+    "\n",
+    "  def roll_one(self):\n",
+    "    self.count += 1\n",
+    "    return wrap_general(1, 101, self.count)\n",
+    "\n",
+    "  def roll(self):\n",
+    "    return self.roll_one() + self.roll_one() + self.roll_one()\n",
+    "  \n",
+    "class Player:\n",
+    "  def __init__(self, position: int):\n",
+    "    self.position = position\n",
+    "    self.score = 0\n",
+    "\n",
+    "  def play(self, roll: int):\n",
+    "    self.position = wrap_general(1, 11, self.position + roll)\n",
+    "    self.score += self.position\n",
+    "    return self.score\n",
+    "\n",
+    "class Game:\n",
+    "  def __init__(self, players: list[int], dice: Dice):\n",
+    "    self.players = [Player(players[i]) for i in range(len(players))]\n",
+    "    self.dice = dice\n",
+    "    self.current_player = -1\n",
+    "\n",
+    "  def get_player(self):\n",
+    "    self.current_player = (self.current_player + 1)%2\n",
+    "    return self.players[self.current_player]\n",
+    "\n",
+    "  def play(self):\n",
+    "    player = self.get_player()\n",
+    "    roll = self.dice.roll()\n",
+    "    player.play(roll)\n",
+    "    return player.score\n",
+    "\n",
+    "def day21(data: list[int]):\n",
+    "  game = Game(data, Dice())\n",
+    "  while game.play() < 1000:\n",
+    "    continue\n",
+    "  return min(game.players[0].score, game.players[1].score) * game.dice.count\n",
+    "\n",
+    "\n",
+    "day21(data21)"
    ]
   },
   {
