--- a/ipynb/2021.ipynb
+++ b/ipynb/2021.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2293,12 +2293,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Day 21"
+    "## Day 21\n",
+    "\n",
+    "Another dp problem"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2307,36 +2309,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6"
+       "797160"
       ]
      },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "wrap_general(1, 10, 15)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "739785"
-      ]
-     },
-     "execution_count": 32,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2354,9 +2336,9 @@
     "    return self.roll_one() + self.roll_one() + self.roll_one()\n",
     "  \n",
     "class Player:\n",
-    "  def __init__(self, position: int):\n",
+    "  def __init__(self, position: int, score=0):\n",
     "    self.position = position\n",
-    "    self.score = 0\n",
+    "    self.score = score\n",
     "\n",
     "  def play(self, roll: int):\n",
     "    self.position = wrap_general(1, 11, self.position + roll)\n",
@@ -2364,29 +2346,90 @@
     "    return self.score\n",
     "\n",
     "class Game:\n",
-    "  def __init__(self, players: list[int], dice: Dice):\n",
-    "    self.players = [Player(players[i]) for i in range(len(players))]\n",
-    "    self.dice = dice\n",
-    "    self.current_player = -1\n",
+    "  def __init__(self, players: list[Player], maxscore = 1000):\n",
+    "    self.players = players\n",
+    "    self.current_player = 0\n",
+    "    self.maxscore = maxscore\n",
     "\n",
     "  def get_player(self):\n",
+    "    player =  self.players[self.current_player]\n",
     "    self.current_player = (self.current_player + 1)%2\n",
-    "    return self.players[self.current_player]\n",
+    "    return player\n",
     "\n",
-    "  def play(self):\n",
+    "  def play(self, roll: int):\n",
     "    player = self.get_player()\n",
-    "    roll = self.dice.roll()\n",
     "    player.play(roll)\n",
-    "    return player.score\n",
+    "    if results := self.check_scores():\n",
+    "      return results\n",
+    "\n",
+    "  def check_scores(self):\n",
+    "    order = sorted(self.players, key=lambda x: x.score, reverse=True)\n",
+    "    if order[0].score >= self.maxscore:\n",
+    "      return order\n",
+    "    return False\n",
     "\n",
     "def day21(data: list[int]):\n",
-    "  game = Game(data, Dice())\n",
-    "  while game.play() < 1000:\n",
-    "    continue\n",
-    "  return min(game.players[0].score, game.players[1].score) * game.dice.count\n",
+    "  game, dice, result = Game([Player(data[0]), Player(data[1])]), Dice(), None\n",
+    "  while not result:\n",
+    "    roll = dice.roll()\n",
+    "    result = game.play(roll)\n",
+    "  return result[-1].score * dice.count\n",
     "\n",
     "\n",
     "day21(data21)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27464148626406"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class DiracDice:\n",
+    "  def roll(self):\n",
+    "    for i in range(1, 4):\n",
+    "      for j in range(1, 4):\n",
+    "        for k in range(1, 4):\n",
+    "          yield i+j+k\n",
+    "\n",
+    "@lru_cache(maxsize=None)\n",
+    "def dirac_turn(players: tuple[tuple[int, int], tuple[int, int]]) -> tuple[int, int]:\n",
+    "  wins = [0, 0]\n",
+    "  for roll in DiracDice().roll():\n",
+    "    state = Game([Player(*players[0]), Player(*players[1])], 21)\n",
+    "    winner = state.play(roll)\n",
+    "    if winner:\n",
+    "      wins[0] += 1\n",
+    "    else:\n",
+    "      results = dirac_turn(((state.players[1].position, state.players[1].score), (state.players[0].position, state.players[0].score)))\n",
+    "      wins[0] += results[1]\n",
+    "      wins[1] += results[0]\n",
+    "\n",
+    "  return wins\n",
+    "\n",
+    "def day21_2(data: list[int]):\n",
+    "  results = dirac_turn(((data[0], 0), (data[1], 0)))\n",
+    "  return max(results)\n",
+    "\n",
+    "day21_2(data21)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 22"
    ]
   },
   {
